--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1029,6 +1029,25 @@ nav ul li a:hover, nav ul li a:focus {
   -webkit-transition: 0.5s background-image;
           transition: 0.5s background-image;
 }
+
+@media only screen and (max-width: 767px) {
+  #top-hero {
+    background-image: url("../img/hero-bg-blurry.jpg");
+  background-image: url("../img/portfolio/office.png");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100%;
+  max-height: 800px;
+  height: 0;
+  padding-bottom: 60%;
+  color: #f9fbfc;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  -webkit-transition: 0.5s background-image;
+          transition: 0.5s background-image;
+  }
+}
 /* line 17, ../../../src/assets/scss/partials/_hero.scss */
 #top-hero .hero-title {
   margin-top: 20%;
